@@ -4903,13 +4903,12 @@ when building external software.
 @subsection Upcoming toolchain
 
 The intention is that the released version of @R{} 2.15.0 will be built
-with an updated toolchain which has support for OpenMP.  A candidate
-version can be downloaded from
+with an updated toolchain.  A candidate version can be downloaded from
 @uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/}
 
 Currently experiments are using the (modified) toolchains from the
 Mingw-w64 project for both 32- and 64-bit builds, using a beta version
-of @command{gcc 4.5.4}.
+of @command{gcc 4.5.4} and version 2.0 of the Mingw-w64 project's runtime.
 
 This has native 32-bit and 64-bit compilers, and hence the C compiler is
 called @command{gcc} for both builds.  This potentially causes problems
@@ -4927,9 +4926,6 @@ local path to the toolchain.
 Some external software libraries will need to be re-compiled under the
 new toolchain: especially those providing a C++ interface. Some are
 available from @uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/@/goodies/}
-
-The DLL supporting OpenMP needs to be shipped in the installer: see the
-macros @samp{DLLs32} and @samp{DLLs64} in file @file{MkRules.dist}.
 
 
 @node Useful additional programs,  , The MinGW toolchain, The Windows toolset
